vlib/v/checker/tests/qsort_external_variable_err.out
vlib/v/checker/tests/qsort_external_variable_err.vv:7:24: error: can not access external variable `i`
    5 |     unsafe { array.sort(a[0] > b[0]) }
    6 |     println(array)
    7 |     unsafe { array.sort(a[i] < b[i]) }
      |                           ^
    8 |     println(array)
    9 | }
